Proje Kampı 3/4 Görevi

--- a/DataAccessLayer/DataAccessLayer.csproj
+++ b/DataAccessLayer/DataAccessLayer.csproj
@@ -57,8 +57,10 @@
     <Compile Include="Abstract\IContentDal.cs" />
     <Compile Include="Abstract\IHeadingDal.cs" />
     <Compile Include="Abstract\IImageFileDal.cs" />
+    <Compile Include="Abstract\IAdminDal.cs" />
     <Compile Include="Abstract\IMessageDal.cs" />
     <Compile Include="Abstract\IRepository.cs" />
+    <Compile Include="Abstract\ISkillDal.cs" />
     <Compile Include="Abstract\IWriterDal.cs" />
     <Compile Include="Concrete\Context.cs" />
     <Compile Include="Concrete\Repositories\GenericRespository.cs" />
@@ -68,11 +70,33 @@
     <Compile Include="EntityFramework\EfContentDal.cs" />
     <Compile Include="EntityFramework\EfHeadingDal.cs" />
     <Compile Include="EntityFramework\EfImageFileDal.cs" />
+    <Compile Include="EntityFramework\EfAdminDal.cs" />
     <Compile Include="EntityFramework\EfMessageDal.cs" />
+    <Compile Include="EntityFramework\EfSkillDal.cs" />
     <Compile Include="EntityFramework\EfWriterDal.cs" />
     <Compile Include="Migrations\202106061219126_InitialCreate.cs" />
     <Compile Include="Migrations\202106061219126_InitialCreate.designer.cs">
       <DependentUpon>202106061219126_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106112137322_mig_adminTable.cs" />
+    <Compile Include="Migrations\202106112137322_mig_adminTable.designer.cs">
+      <DependentUpon>202106112137322_mig_adminTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106112359182_mig_MessageRead.cs" />
+    <Compile Include="Migrations\202106112359182_mig_MessageRead.designer.cs">
+      <DependentUpon>202106112359182_mig_MessageRead.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106130003389_mig_ConractRead.cs" />
+    <Compile Include="Migrations\202106130003389_mig_ConractRead.designer.cs">
+      <DependentUpon>202106130003389_mig_ConractRead.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106130054017_mig_AboutEdit.cs" />
+    <Compile Include="Migrations\202106130054017_mig_AboutEdit.designer.cs">
+      <DependentUpon>202106130054017_mig_AboutEdit.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202106131451500_add_SkillsMig.cs" />
+    <Compile Include="Migrations\202106131451500_add_SkillsMig.designer.cs">
+      <DependentUpon>202106131451500_add_SkillsMig.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -91,6 +115,21 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\202106061219126_InitialCreate.resx">
       <DependentUpon>202106061219126_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106112137322_mig_adminTable.resx">
+      <DependentUpon>202106112137322_mig_adminTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106112359182_mig_MessageRead.resx">
+      <DependentUpon>202106112359182_mig_MessageRead.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106130003389_mig_ConractRead.resx">
+      <DependentUpon>202106130003389_mig_ConractRead.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106130054017_mig_AboutEdit.resx">
+      <DependentUpon>202106130054017_mig_AboutEdit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202106131451500_add_SkillsMig.resx">
+      <DependentUpon>202106131451500_add_SkillsMig.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
