--- a/YouTubeMvc/Web.config
+++ b/YouTubeMvc/Web.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
@@ -12,11 +13,19 @@
   <system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
-  <customErrors mode="On">
-    <error statusCode="404" redirect="/ErrorPage/Page404"/>
-   <error statusCode="403" redirect="/ErrorPage/Page404"/>
-  
-  </customErrors>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="/ErrorPage/Page404" />
+      <error statusCode="403" redirect="/ErrorPage/Page404" />
+    </customErrors>
+    <authentication mode="Forms">
+      <forms loginUrl="/Login/index">
+      </forms>
+    </authentication>
+    <roleManager enabled="true" defaultProvider="AdminRoleProvider">
+      <providers>
+        <add name="AdminRoleProvider" type="YouTubeMvc.Roles.AdminRoleProvider" />
+      </providers>
+    </roleManager>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
